--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -109,6 +109,11 @@ header .about_block .right_group_block .rection_groups span {
   background-repeat: no-repeat;
 }
 
+.parallax.parallax-custom {
+  background-size: cover !important;
+  background-position: center !important;
+}
+
 .parallax-home {
   opacity: 0.9;
   background-image: url(../img/bg_home.png);
