--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -808,6 +808,10 @@ aside .login svg {
   transition: 0.5s all ease;
 }
 
+.placing_order .empty-block {
+  max-width: 1000px;
+}
+
 .placing_order .about_block .left_form {
   min-width: auto !important;
   width: 100%;
