--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -128,6 +128,42 @@ header .about_block .right_group_block .rection_groups span {
     /* background-size: auto 100%; */
 }
 
+header .about_block .right_group_block .cart svg {
+    width: 50px;
+    height: 50px;
+    padding: 15px;
+    border-radius: 10px;
+    background: var(--bg, #F9F9F9);
+    color: #A4A0A0;
+}
+
+header .rection_groups {
+  color: #A4A0A0;
+}
+
+header .about_block .right_group_block .cart {
+  position: relative;
+}
+
+header .about_block .right_group_block .cart span {
+    min-width: 21px;
+    position: absolute;
+    top: -8px;
+    right: -7px;
+    color: var(--white, #FFF);
+    text-align: center;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    padding: 1px 4px;
+    border-radius: 5px;
+    background: var(--main, #FC7361);
+}
+
+header .about_block .right_group_block .cart svg:hover {
+  color: #000;
+}
 .search_icon {
     line-height: 0;
 }
